--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.1",
+    "@types/qrcode": "^1.5.5",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
-    "nodemon": "^3.1.2"
+    "googleapis": "^137.1.0",
+    "nodemon": "^3.1.2",
+    "qrcode": "^1.5.3"
   }
 }
