--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/app.ts"
+    "//": "ts-node src/utils/googleAPICredsGenerator.ts && ts-node src/index.ts",
+    "start": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,14 +13,18 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/qrcode": "^1.5.5",
+    "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "googleapis": "^137.1.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
     "qrcode": "^1.5.3"
   }
