--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "//": "ts-node src/utils/googleAPICredsGenerator.ts && ts-node src/index.ts",
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "ts-node src/utils/googleAPICredsGenerator.ts && ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
