--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.1",
+    "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.15",
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^9.0.8",
@@ -24,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "googleapis": "^137.1.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
     "qrcode": "^1.5.3"
