--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.2",
-    "qrcode": "^1.5.3"
+    "nodemon": "^3.1.2"
   }
 }
